<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/selector_choice"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/selector_topic"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/selector_sort"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/selector_shoping"
        android:title="@string/title_shopping_cat" />

    <item
        android:id="@+id/navigation_my"
        android:icon="@drawable/selector_me"
        android:title="@string/title_my" />

</menu>